Updated build.gradle for hsql and rest annotations

--- a/customer.api/build.gradle
+++ b/customer.api/build.gradle
@@ -19,6 +19,9 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.1.8.RELEASE'
+	compile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.8.RELEASE'
 }
 
 test {
