--- a/customer.api/build.gradle
+++ b/customer.api/build.gradle
@@ -23,7 +23,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	
-	implementation 'com.h2database:h2'
+	//implementation 'com.h2database:h2'
+	compile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.3'
+	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
