--- a/customer.api/build.gradle
+++ b/customer.api/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	
 	compile group: 'com.auth0', name: 'java-jwt', version:'3.8.1'
 	compile group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.3.2'
+	compile group: 'io.jaegertracing', name: 'jaeger-client', version: '0.35.5'
 }
 
 test {
