--- a/customer.api/bin/main/application.properties
+++ b/customer.api/bin/main/application.properties
@@ -1,1 +1,10 @@
+spring.jpa.hibernate.ddl-auto=none
 
+management.security.enabled=false
+management.metrics.export.prometheus.enabled: true
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=
+
+management.endpoints.jmx.exposure.include=*
+management.endpoints.jmx.exposure.exclude=
