--- a/customer.api/build.gradle
+++ b/customer.api/build.gradle
@@ -26,15 +26,15 @@ dependencies {
 	//implementation 'com.h2database:h2'
 	compile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.3'
 	
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+//	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+//		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+//	}
 	
 	compile group: 'com.auth0', name: 'java-jwt', version:'3.8.1'
 	compile group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.3.2'
 	compile group: 'io.jaegertracing', name: 'jaeger-client', version: '0.35.5'
 }
 
-test {
-	useJUnitPlatform()
-}
+//test {
+//	useJUnitPlatform()
+//}
